--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -42,7 +42,7 @@
                     {{ if .Site.Menus.icon }}
                         <ul class="nav navbar-nav navbar-right">
                             {{ range sort .Site.Menus.icon }}
-                                <li class="navbar-icon"><a href="{{ .URL }}"><i class="fa fa-{{ .Name }}"></i></a></li>
+                                <li class="navbar-icon"><a href="{{ .URL }}"><i class="icon-{{ .Name }}"></i></a></li>
                             {{ end }}
                         </ul>
                     {{ end }}
