Fix profile image url

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
 
     <div>
         <div class="avatar">
-            <img src="{{ .Site.BaseURL }}img/{{ .Site.Params.avatar }}" alt="Responsive image">
+            <img src="img/{{ .Site.Params.avatar }}" alt="Profile image">
         </div>
         <h3>I'm <strong>{{ .Site.Params.author }}</strong>, a Computer Science student at McMaster.</h3>
         <h3>This website is under construction, but should be done soon&trade;.</h3>
