Social links now open in a new tab

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,7 +34,7 @@
                     {{ if .Site.Menus.main }}
                         <ul class="nav navbar-nav">
                             {{ range sort .Site.Menus.main }}
-                                <li><a href="{{ .URL }}">{{ .Name }}</a></li>
+                                <li><a href="{{ .URL }}" target="_blank">{{ .Name }}</a></li>
                             {{ end }}
                         </ul>
                     {{ end }}
@@ -42,7 +42,7 @@
                     {{ if .Site.Menus.icon }}
                         <ul class="nav navbar-nav navbar-right">
                             {{ range sort .Site.Menus.icon }}
-                                <li class="navbar-icon"><a href="{{ .URL }}"><i class="icon-{{ .Name }}"></i></a></li>
+                                <li class="navbar-icon"><a href="{{ .URL }}" target="_blank"><i class="icon-{{ .Name }}"></i></a></li>
                             {{ end }}
                         </ul>
                     {{ end }}
